<resources>
    <string name="app_name">Bailu meter</string>

    <string-array name="dfu_files">
        <item>movesense_dfu</item>
        <item>"movesense_dfu_s</item>
        <item>movesense_dfu_bootloader</item>
        <item>movesense_dfu_s_bootloader</item>
    </string-array>
    <string-array name="dfu_file_titles">
        <item>Bailu2000A with seasonal configuration</item>
        <item>Bailu2000B with autoactivation</item>
    </string-array>

    <string name="disclaimer">"Your name and sensor number will be sent to the server"</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="title_disclaimer">Disclaimer</string>
    <string name="title_info">Set information</string>

    <string name="title_location_permission">Location permission</string>
    <string name="text_location_permission">Bluetooth LE scanning requires location permission</string>

    <string name="text_fine_location_permission">Localizing parties requires GPS permission.</string>

    <string name="title_storage_permission">Storage permission</string>
    <string name="text_storage_permission">The app requires storage access for accessing the sensor software</string>

    <string name="text_location_on">Location services have to be turned on for the app to work. Go to settings?</string>
    <string name="title_location_on">Enable location services</string>
    <string name="ok">OK</string>

    <string name="connect_for_update">Is the red LED on?</string>

    <string name="serial">Serial</string>
    <string name="path">Path</string>
    <string name="contract">Contract</string>
    <string name="result">Result</string>

    <string name="btn_get">Get</string>
    <string name="btn_post">Post</string>
    <string name="btn_del">Del</string>
    <string name="select_test">Select test:</string>
    <string name="linear_acceleration_name">Linear Acceleration</string>
    <string name="angular_velocity_name">Angular Velocity</string>
    <string name="magnetic_field_name">Mangetic Field</string>
    <string name="heart_rate_name">Heart Rate</string>
    <string name="temperature_name">Temperature</string>
    <string name="led_name">Led</string>
    <string name="multi_subscription_name">Multi Subscription</string>
    <string name="close_app">Close app</string>
    <string name="do_you_want_to_close_application">Do You want to close application?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_wait">Please Wait…</string>
    <string name="please_wait_connecting">Connecting may take 10–30s \nPlease Wait…</string>
    <string name="connecting">Connecting</string>
    <string name="loading_information">Loading information…</string>
    <string name="temporary_disabled">Temporary disabled</string>
    <string name="kelvin">kelvin:</string>
    <string name="celsius">celsius:</string>
    <string name="movesense">Movesense</string>
    <string name="rate">Rate:</string>
    <string name="y">y:</string>
    <string name="x">x:</string>
    <string name="z">z:</string>
    <string name="subscribe">Subscribe</string>
    <string name="test_magnetic_field">Test: Magnetic Field</string>
    <string name="test_heart_rate">Test: Heart Rate</string>
    <string name="value">Value:</string>
    <string name="test_led">Test: Led</string>
    <string name="off_on">OFF / ON</string>
    <string name="response">Response:</string>
    <string name="waiting_for_action">Waiting for action</string>
    <string name="test_linear_acceleration">Test: Linear Acceleration</string>
    <string name="test_multi_subscription">Test: Multi Subscription</string>
    <string name="test_temperature">Test: Temperature</string>
    <string name="waiting_for_response">Waiting for response</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="dfu_mode">Run DFU Mode</string>
    <string name="write_external_storage_permission_title">Write External Storage Permission</string>
    <string name="write_external_storage_permission_text">Saving files required Write External Storage Permission</string>
    <string name="enable_dfu_mode">Enable DFU Mode</string>
    <string name="dfu_mode_enabled">Dfu Mode Enabled</string>
    <string name="dfu_mode_press_button">Press button to Enable DFU Mode</string>
    <string name="dfu_error">DFU Error</string>
    <string name="dfu_mode_is_enabled">Dfu Mode is Enabled. Close this app and start nRF Toolbox to update a new firmware</string>
    <string name="test_angular_velocity">Test: Angular Velocity</string>
    <string name="read_logs_permission_title">Read Logs Permission</string>
    <string name="read_lgos_permission_text">Saving logs to file required Read Logs Permission</string>
    <string name="send_logs_to_google_drive">Send Logs To Google Drive</string>
    <string name="no_network_connection_available">No network connection available.</string>
    <string name="log_out_from_drive">Log Out From Drive</string>
    <string name="refresh_files">Refresh Files</string>
    <string name="change_account">Change Account</string>
    <string name="log_in">Log In</string>
    <string name="connection_error_title">Connection Error</string>
    <string name="connection_error_message">Something went wrong. Please Try again</string>
    <string name="remove_device">Disconnect</string>
    <string name="dfu_file_type_title">Select file type</string>
    <string name="uploading">Uploading. This will take a few minutes.\nDo not close the application.</string>
    <string name="uploading_selection">Choose a file.</string>
    <string name="uploading_bootloader">Uploading with bootloader. \nThis will take about 4 minutes. \nDo not close the application!</string>
    <string name="update">Update</string>
    <string name="_0percent">0%</string>
    <string name="dfu_status">Dfu Status:</string>
    <string name="disconnect">Disconnect</string>
    <string name="reconnecting_to">"Reconnecting to the device…"</string>
    <string-array name="dfu_file_type">
        <item>Distribution packet (ZIP)</item>
        <item>Soft Device</item>
        <item>Bootloader</item>
        <item>Application</item>
    </string-array>
    <string name="periodicity_detection">Periodicity detection</string>
    <string name="detect_periods">Detect periods</string>
    <string name="activity_periodicity_detection_name">Periodicity Detection</string>
    <string name="message_timestamp">Timestamp</string>
    <string name="message_trigger_period_id">Trigger period id</string>
    <string name="trigger_period">Trigger period</string>
    <string name="message_histogram">Histogram</string>
    <string name="manage_class_data">Manage class data</string>
    <string name="teaching">Teaching</string>
    <string name="sensor_version">null</string>
    <string name="get_current_calue">Calibrate</string>
    <string name="start_service">Start debugging</string>
    <string name="stop_service">Stop debugging</string>
    <string name="subs_switch">Subscribe</string>
    <string name="post_result">Post to server</string>
    <string name="get_info">Get info</string>
    <string name="minimum_angle_input">Angle threshold</string>
    <string name="sample_rate_input">Sample rate</string>
    <string name="set_config">Apply config</string>
    <string name="filter_switch">Gyroscopic filter</string>
    <string name="acc_threshold">"Min acceleration"</string>
    <string name="plot_button">Plot</string>
    <string name="min_acc">Min acc</string>
    <string name="main_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="bailu_get_button">Get info</string>
    <string name="battery_level">Battery level</string>
    <string name="reset_name_button">Reset username</string>
    <string name="reset_serial">Forget your device</string>
    <string name="title_help">Help</string>
    <string name="help_text">Bailu app is a setup tool and scanner for Movesense party app.
    The sensors measure your activity to come up with a party level, which it will advertise via bluetooth
    along with other partying related info. When scanning, Bailu app recognizes nearby sensors showing their
    party status.\n\nThe app automatically forces updates on non compatible sensor software. You can choose between two versions.
        In both versions the led blinks every 10 seconds indicating that the sensor is on. If not
        scanning parties the sensor turns off after few minutes.
        The sensors do NOT turn off if their tabs remain connected. The overall pad keeps the sensor
        on.\n\nBailu2000B is primarily meant for usage without Bailu app. It automatically turns starts seeking
        parties when turned on, and refreshes the one hour timer when the tabs are connected or disconnected.
        The led blinks when this happens. High enough party score also refreshes the time.\n\nBailu2000A
        is only controlled with the setup tool in Bailu app, which helps save battery.
        This also allows for continuous party metering for up to 24 hours without touching the sensor. Bailu2000A
        can also use online settings configured for the season.\n\nThe battery life is probably around 60 h when scanning.\n\nIf
        your device fails to find your movesense, try "forget device" from the side menu.
        </string>
    <string name="btn_name_ready">Submit</string>
    <string name="name_view_hint">Username (max 20 char)</string>
    <string name="select_dfu">Select dfu device</string>
    <string name="setup_sensor">Setup sensor</string>
    <string name="setup_sensor_desc">Connect and name a sensor. Turn on the party service.</string>
    <string name="scanner_button_desc">Scan nearby parties.</string>
    <string name="scan_partiers">Scan partiers</string>
    <string name="update_text">Update</string>
    <string name="start_update_text">Start</string>
    <string name="connected_after_update">Connected.</string>
    <string name="connected_after_bootloader">Connected. Booting sensor.</string>
    <string name="send_party_text">Share a party</string>
    <string name="get_party">Get parties</string>
    <string name="dont_send">Nothing worth advertising here.</string>

</resources>
