<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="com.movesense.mds.fyssabailu.bailu_app.FyssaMainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/nimi_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif"
        tools:text="Heiluttelija: Pekka" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="463dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/do_button"
            android:layout_width="183dp"
            android:layout_height="99dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/main_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/stop"
            android:layout_width="65dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/stop_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/battery_button"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/battery_level"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/stop" />
    </android.support.constraint.ConstraintLayout>


</LinearLayout>
